Changelog
=========

0.4 (unreleased)
----------------

New feature (tar.gz archives) and marketing (talks).

- Feature #4 - Added support of "accept" header for POST requests on
  directories: accepted types are ZIP (``application/zip``) and TAR.GZ
  (``application/gzip``).
- Refactoring #20 - Render functions return generator ; moved response
  composition (file/archive) into views via writers.
- Feature #46 - Added content of talks in documentation: AFPY event and
  EuroPython 2013.

See also `milestone 0.4 on bugtracker`_.


0.3 (2013-04-16)
----------------

New features, documentation, bugfixes.

- Bug #44 - Accepted arrays in URL-encoded POST.
- Bug #40 - Setup CORS to allow AJAX requests on diecutter's API.
- Refactoring #37 - Used Jinja's environment.
- Bug #34 - Frozen buildout configuration file for development environment.
- Features #31 and #43 - Published diecutter's demo online. Online API URL
  changed.
- Feature #24 - Added Sphinx documentation template in diecutter's demo.
- Feature #23 - Added diecutter's Sphinx documentation.
- Feature #10 - Added dynamic tree template.

See also `milestone 0.3 on bugtracker`_.


0.2 (2013-02-22)
----------------

Maintenance release, implementation refactoring, tests.

- Refactoring #22 - Added tests.
- Bug #17 - Sort directories alphabetically.
- Bug #13 - Fixed "diecutter.readonly" which was always ``True``.

See also `milestone 0.2 on bugtracker`_.


0.1 (2013-01-29)
----------------

Initial release.

- Bug #11 - On POST requests, handle empty content-type as
  "application/x-www-form-urlencoded".
- Feature #8 - Support INI files as input for POST requests.
- Feature #3 - Use a configuration file outside diecutter's code.
- Feature #2 - If "readonly" option is ``True``, forbid PUT requests.
- Feature #1 - Pass a "diecutter" context variable to templates, containing
  data such as "diecutter.api_url", "diecutter.version" and "diecutter.now".
- Feature - Diecutter service renders directories as ZIP archives.