@@ -8,6 +8,8 @@ diecutter.token = {{ token|default('') }}
 # Set this to true (without quotes) if you want templates to be readonly,
 # i.e. forbid PUT requests.
 diecutter.readonly = {{ readonly|default('false') }}
+# Default archive format returned when rendering directories.
+diecutter.default_archive_format = {{ default_archive_format|default('application/gzip') }}
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
