@@ -67,18 +67,18 @@ POST renders directory against a context:
 
 .. code-block:: text
 
-   $ curl -X POST -d name="world" http://localhost:8106/greetings > greetings.zip
-   $ unzip greetings.zip
+   $ curl -X POST -d name="world" -s http://localhost:8106/greetings | tar -zx
+
    $ tree greetings
    greetings
    ├── hello.txt
    └── goodbye.txt
-
    0 directory, 2 files
 
-   $ cat hello.txt
+   $ cat greetings/hello.txt
    Hello world!
-   $ cat goodbye.txt
+
+   $ cat greetings/goodbye.txt
    Goodbye world!
 
 All files in directory are rendered with the same context data.
@@ -89,18 +89,19 @@ filenames are prefixed with directory name.
 Supported archives types: "accept" header
 =========================================
 
-By default, POST requests return ZIP archives.
+By default, POST requests return GZIP archives.
 
-You can get the content as a tar.gz archive with the "accept" header:
+You can get the content as a TAR.GZ archive with the "accept" header:
 
 .. code:: text
 
-   $ curl -s -X POST --header "accept:application/gzip" -d django_project=demo http://localhost:8106/+django_project+/ | tar -zt
-   manage.py
-   demo/__init__.py
-   demo/settings.py
-   demo/urls.py
-   demo/wsgi.py 
+   $ curl -X POST --header "accept:application/zip" -d name="world" http://localhost:8106/greetings > greetings.zip
+   $ unzip greetings.zip
+   $ tree greetings
+   greetings
+   ├── hello.txt
+   └── goodbye.txt
+   0 directory, 2 files
 
 .. tip::
 
@@ -109,7 +110,7 @@ You can get the content as a tar.gz archive with the "accept" header:
 
    .. code:: text
 
-      $ curl -X POST --header "accept:fake/mime-type" -d django_project=demo http://localhost:8106/+django_project+/
+      $ curl -X POST --header "accept:fake/mime-type" -d name="world" http://localhost:8106/greetings
       406 Not Acceptable
 
       The server could not comply with the request since it is either malformed or
